# ecpdap

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: clippy.yml  format.yml  lint.yml  release.yaml  rustfmt.yml  test.yml
drivers/: 99-cmsis-dap.rules  README.md
src/: bitvec.rs  dap.rs  ecp5.rs  flash.rs  jtag.rs  lib.rs  main.rs  probe.rs
src/bitstream/: mod.rs  parser.rs
