[package]
name = "ecpdap"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"
repository = "https://github.com/adamgreig/ecpdap"
license = "apache-2.0 OR MIT"
description = "Program ECP5 FPGAs using CMSIS-DAP probes"

[dependencies]
rusb = "0.6.4"
hidapi = "1.2.3"
log = "0.4.11"
anyhow = "1.0.32"
thiserror = "1.0.20"
pretty_env_logger = "0.4.0"
num_enum = "0.5.1"
clap = "2.33.2"
