[package]
name = "ecpdap"
version = "0.1.8"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"
repository = "https://github.com/adamgreig/ecpdap"
license = "Apache-2.0 OR MIT"
description = "Program ECP5 FPGAs using CMSIS-DAP probes"

[dependencies]
log = "0.4.17"
anyhow = "1.0.58"
thiserror = "1.0.31"
pretty_env_logger = "0.4.0"
num_enum = "0.5.7"
clap = { version = "3.2.16", features = ["cargo", "unicode"] }
indicatif = "0.17.0"
spi-flash = "0.3.0"
jtagdap = "0.1.1"
